Feature: 73762052 - Alterações de status de pedido para o contexto de preparação
