# src/swagger-output.json
@@ -364,114 +364,6 @@
         }
       }
     },
-    "/pedido/cadastrar": {
-      "post": {
-        "tags": [
-          "Pedidos"
-        ],
-        "summary": "Cadastrar novo pedido",
-        "description": "Endpoint para cadastro de novo cliente para posterior identificação em pedidos e uso em campanhas de marketing",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "required": [
-                "clienteId"
-              ],
-              "properties": {
-                "clienteId": {
-                  "type": "string",
-                  "minLength": 36,
-                  "maxLength": 36,
-                  "format": "uuid",
-                  "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pedido cadastrado com sucesso2",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Pedido cadastrado com sucesso3"
-                },
-                "pedido": {
-                  "$ref": "#/definitions/PedidoResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Ocorreu um erro inesperado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pedido/cancelar/{pedidoId}": {
-      "post": {
-        "tags": [
-          "Pedidos"
-        ],
-        "summary": "Cancelar um pedido",
-        "description": "Endpoint para cancelamento de um pedido",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "pedidoId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "ID do pedido",
-            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pedido cancelado com sucesso",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Pedido cadastrado com sucesso"
-                },
-                "pedido": {
-                  "$ref": "#/definitions/PedidoResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Ocorreu um erro inesperado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/pedido/listar/{statusPedido}": {
       "get": {
         "tags": [
@@ -592,24 +484,44 @@
         }
       }
     },
-    "/preparacao/pedido/proximo": {
-      "get": {
+    "/pedido/cadastrar": {
+      "post": {
         "tags": [
-          "Preparação"
+          "Pedidos"
         ],
-        "summary": "Busca o próximo pedido para preparação",
-        "description": "Endpoint para buscar o próximo pedido para preparação",
+        "summary": "Cadastrar novo pedido",
+        "description": "Endpoint para cadastro de novo cliente para posterior identificação em pedidos e uso em campanhas de marketing",
         "produces": [
           "application/json"
         ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "required": [
+                "clienteId"
+              ],
+              "properties": {
+                "clienteId": {
+                  "type": "string",
+                  "minLength": 36,
+                  "maxLength": 36,
+                  "format": "uuid",
+                  "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Pedido encontrado",
+            "description": "Pedido cadastrado com sucesso2",
             "schema": {
               "properties": {
                 "mensagem": {
                   "type": "string",
-                  "example": "Pedido encontrado"
+                  "example": "Pedido cadastrado com sucesso3"
                 },
                 "pedido": {
                   "$ref": "#/definitions/PedidoResponse"
@@ -627,28 +539,17 @@
                 }
               }
             }
-          },
-          "404": {
-            "description": "Nenhum pedido encontrado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Nenhum pedido encontrado"
-                }
-              }
-            }
           }
         }
       }
     },
-    "/pedido/fechar/{pedidoId}": {
-      "get": {
+    "/pedido/cancelar/{pedidoId}": {
+      "post": {
         "tags": [
           "Pedidos"
         ],
-        "summary": "Fechar pedido",
-        "description": "Endpoint para fechar um pedido",
+        "summary": "Cancelar um pedido",
+        "description": "Endpoint para cancelamento de um pedido",
         "produces": [
           "application/json"
         ],
@@ -664,12 +565,12 @@
         ],
         "responses": {
           "200": {
-            "description": "Pedido fechado com sucesso. Aguardando pagamento.",
+            "description": "Pedido cancelado com sucesso",
             "schema": {
               "properties": {
                 "mensagem": {
                   "type": "string",
-                  "example": "Pedido fechado com sucesso. Aguardando pagamento."
+                  "example": "Pedido cadastrado com sucesso"
                 },
                 "pedido": {
                   "$ref": "#/definitions/PedidoResponse"
@@ -692,7 +593,7 @@
       }
     },
     "/pedido/checkout/{pedidoId}": {
-      "get": {
+      "post": {
         "tags": [
           "Pedidos"
         ],
@@ -719,153 +620,6 @@
                 "mensagem": {
                   "type": "string",
                   "example": "Pedido pago com sucesso"
-                },
-                "pedido": {
-                  "$ref": "#/definitions/PedidoResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Ocorreu um erro inesperado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pedido/iniciar-preparacao/{pedidoId}": {
-      "get": {
-        "tags": [
-          "Pedidos"
-        ],
-        "summary": "Iniciar preparação de um pedido",
-        "description": "Endpoint para iniciar a preparação de um pedido",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "pedidoId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "ID do pedido",
-            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Preparação do pedido iniciada com sucesso",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Preparação do pedido iniciada com sucesso"
-                },
-                "pedido": {
-                  "$ref": "#/definitions/PedidoResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Ocorreu um erro inesperado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pedido/finalizar-preparacao/{pedidoId}": {
-      "get": {
-        "tags": [
-          "Pedidos"
-        ],
-        "summary": "Finalizar preparação de um pedido",
-        "description": "Endpoint para finalizar a preparação de um pedido",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "pedidoId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "ID do pedido",
-            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Preparação do pedido finalizada com sucesso",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Preparação do pedido finalizada com sucesso"
-                },
-                "pedido": {
-                  "$ref": "#/definitions/PedidoResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Ocorreu um erro inesperado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pedido/entregar/{pedidoId}": {
-      "get": {
-        "tags": [
-          "Pedidos"
-        ],
-        "summary": "Entregar um pedido",
-        "description": "Endpoint para entregar um pedido",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "pedidoId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "ID do pedido",
-            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pedido entregue com sucesso.",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Pedido entregue com sucesso."
                 },
                 "pedido": {
                   "$ref": "#/definitions/PedidoResponse"
@@ -978,6 +732,55 @@
         }
       }
     },
+    "/pedido/fechar/{pedidoId}": {
+      "post": {
+        "tags": [
+          "Pedidos"
+        ],
+        "summary": "Fechar pedido",
+        "description": "Endpoint para fechar um pedido",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "pedidoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do pedido",
+            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Pedido fechado com sucesso. Aguardando pagamento.",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Pedido fechado com sucesso. Aguardando pagamento."
+                },
+                "pedido": {
+                  "$ref": "#/definitions/PedidoResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/pedido/{pedidoId}/combo/{comboId}": {
       "delete": {
         "tags": [
@@ -1014,6 +817,203 @@
                 "mensagem": {
                   "type": "string",
                   "example": "Combo removido do pedido com sucesso"
+                },
+                "pedido": {
+                  "$ref": "#/definitions/PedidoResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/preparacao/pedido/proximo": {
+      "post": {
+        "tags": [
+          "Preparação"
+        ],
+        "summary": "Busca o próximo pedido para preparação",
+        "description": "Endpoint para buscar o próximo pedido para preparação",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Pedido encontrado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Pedido encontrado"
+                },
+                "pedido": {
+                  "$ref": "#/definitions/PedidoResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Nenhum pedido encontrado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Nenhum pedido encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/preparacao/pedido/{pedidoId}/iniciar-preparacao": {
+      "post": {
+        "tags": [
+          "Preparação"
+        ],
+        "summary": "Iniciar preparação de um pedido",
+        "description": "Endpoint para iniciar a preparação de um pedido",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "pedidoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do pedido",
+            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Preparação do pedido iniciada com sucesso",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Preparação do pedido iniciada com sucesso"
+                },
+                "pedido": {
+                  "$ref": "#/definitions/PedidoResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/preparacao/pedido/{pedidoId}/finalizar-preparacao": {
+      "post": {
+        "tags": [
+          "Preparação"
+        ],
+        "summary": "Finalizar preparação de um pedido",
+        "description": "Endpoint para finalizar a preparação de um pedido",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "pedidoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do pedido",
+            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Preparação do pedido finalizada com sucesso",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Preparação do pedido finalizada com sucesso"
+                },
+                "pedido": {
+                  "$ref": "#/definitions/PedidoResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/preparacao/pedido/{pedidoId}/entregar": {
+      "post": {
+        "tags": [
+          "Preparação"
+        ],
+        "summary": "Entregar um pedido",
+        "description": "Endpoint para entregar um pedido",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "pedidoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do pedido",
+            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Pedido entregue com sucesso.",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Pedido entregue com sucesso."
                 },
                 "pedido": {
                   "$ref": "#/definitions/PedidoResponse"
